Bug 116066 - Not able to select an image in Calc (LibO6.1.0.0)
Summary: Not able to select an image in Calc (LibO6.1.0.0)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-Images Read-Only
  Show dependency treegraph
 
Reported: 2018-02-27 16:21 UTC by Telesto
Modified: 2018-04-04 08:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (573.13 KB, video/mp4)
2018-02-28 15:43 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-02-27 16:21:37 UTC
Description:
Not able to select an image in Calc (LibO6.1.0.0)

Steps to Reproduce:
1. Open attachment 140177 [details] (bug 116060)
2. Try selecting the "Groene stroom" image (is in the background somehow)



Actual Results:  
Not able to select an image in Calc.

Expected Results:
Should be selectable



Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.1.0.0.alpha0+
Build ID: e1771058ebc4efc58515ffa60250843274990bac
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-02-24_23:43:30
Locale: nl-NL (nl_NL); Calc: CL

Not in
Version: 6.0.0.0.alpha1+
Build ID: dae6ba564fcf20299b7a560aeb346efc84364d41
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-11-01_00:28:17
Locale: nl-NL (nl_NL); Calc: CL



User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Xisco Faulí 2018-02-27 16:29:58 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: fa2dd2ba03f8be1f148dca8f6164daaf7bbf7d96
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Win only ?
Comment 2 Xisco Faulí 2018-02-27 16:31:02 UTC
Neither in

Version: 6.1.0.0.alpha0+
Build ID: 8b1a83bffe35ae0e71735569512c1586bcb37b25
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-01-23_08:54:58
Locale: es-ES (es_ES); Calc: group threaded
Comment 3 Xisco Faulí 2018-02-27 16:31:36 UTC
@Telesto,
Does it happen in safe-mode ?
Comment 4 Timur 2018-02-27 16:35:04 UTC
No repro with master. 
If you find such a strange, less probable bug, it's better to wait a few days to get a new master or test another version. 
It'd be really strange not to be able to select a singe image.
Comment 5 Telesto 2018-02-27 16:47:11 UTC
Sorry.. Indeed a profile corruption.. Should have checked it before..
Comment 6 Telesto 2018-02-28 15:43:35 UTC
Created attachment 140225 [details]
Screencast
Comment 7 Telesto 2018-02-28 15:47:23 UTC
Retry. STR
1. Download attachment 140177 [details] (bug 116060)
2. Change the file attribute to read-only
3. Launch Writer & Open the file
4. Click Edit Document
5. Try selecting the "Groene stroom" image
Comment 8 raal 2018-02-28 21:56:03 UTC
(In reply to Telesto from comment #7)
> Retry. STR
> 1. Download attachment 140177 [details] (bug 116060)
> 2. Change the file attribute to read-only
> 3. Launch Writer & Open the file
> 4. Click Edit Document
> 5. Try selecting the "Groene stroom" image

Confirm. Step 2 is needed for reproduce the issue.

Version: 6.1.0.0.alpha0+
Build ID: dc8d8cbf30ca3429236eca16b8f447ef5d4e61d3
CPU threads: 1; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-02-28_00:00:19
Comment 9 raal 2018-03-01 08:38:33 UTC
This seems to have begun at the below commit.
Adding Cc: to Mike Kaganski; Could you possibly take a look at this one? Thanks
 5346f0c359c8227caa2cd4d8ab7b7708211291a2 is the first bad commit
commit 5346f0c359c8227caa2cd4d8ab7b7708211291a2
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Feb 8 20:58:11 2018 -0800

    source 2a7057250c8f73fdfb4c65a7525d17e9770459df
author	Mike Kaganski <mike.kaganski@collabora.com>	2018-02-08 18:06:06 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2018-02-09 05:48:58 +0100
commit 2a7057250c8f73fdfb4c65a7525d17e9770459df (patch)
tree 2fb8b54e2e00f731818041449362ec2163f908ad
parent 7d56128654457bfc859217c23a957d1712fd6e1c (diff)
tdf#108210: Allow to ignore a lock file if there's no filesystem lock
Comment 10 Mike Kaganski 2018-03-10 17:17:17 UTC
https://gerrit.libreoffice.org/51051
Comment 11 Commit Notification 2018-04-03 09:38:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7dd704ab1f41086f81136e3987fa7f9aed5ccf5f

tdf#116066: call DoSaveCompleted after SetReadOnlyUI

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2018-04-04 08:42:15 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 2d5ce0e1b233c83f91481cd6b9306ac8de7f5ff8
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Thank you Mike!