tdf#116066: call DoSaveCompleted after SetReadOnlyUI

Change-Id: Ided8f12764585b2ba62e4c296af43ac07b9e31ed